# QC-scanner

./: .gitattributes  .gitignore  CLAUDE.md  HANDOVER.md  README.md  REFACTOR_INSTRUCTIONS.md  SESSIONS.md  app.py  qc-console.desktop  qc_console.spec  setup.sh
.claude/hooks/: engineer_prompt.sh  load_prompt_context.sh
backend/: README.md  robot_bridge.py  scan_pipeline.py  server.py  test_robot_bridge.py
config/: local_config.example.yaml  system_config.yaml
config/cad/: DEX05120563 B18 - Bearing press tool - Location pin small_Rev 0.STEP
data/: calibration_poses.json  frame_calibration.json  scans.json
docker/: Dockerfile  build.sh  kinematics_fixed.yaml  move_group.launch.py  run_arm.sh  view_arm.launch.py  view_arm.rviz
docs/: adding_new_tools.md  architecture.md  calibration.md  code-vs-architecture-audit.md  hardware_setup.md  open_questions.md  point_cloud_processing.md  refactor-guide.md  ros2_node_graph.md  running_the_planner.md
docs/session-logs/: 2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-20.md  2026-07-22.md  2026-07-23.md
gui/: Scan Cell Console.dc.html
gui/_ds/dexory-design-system-6ed788ca-5d23-4831-bc1e-8fdf3e01b65b/: README.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  colors_and_type.css
gui/scanpath-visualizer/: README.md  app.js  index.html  robot.js
gui/viewer/: comms.html  debug.html  debug.js  index.html  ros_bridge.js  viewer.css  viewer.js  viewer3d.js
gui/viewer/assets/arm/: chain.json
libs/: qc_config.py
libs/inspection/: __init__.py  pipeline.py
libs/path_planning/: box_raster.py  cad_loader.py  contour_raster.py  frame_transform.py  hemisphere_raster.py  incidence_cone_modifier.py  lawnmower_raster.py  multiview_lawnmower.py  normal_estimation.py  placement.py  table_clearance.py  waypoint_generator.py
ros2_ws/src/: README.md
ros2_ws/src/dexory_teach_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/dexory_teach_ros/dexory_teach_ros/: teach_app.py
ros2_ws/src/dexory_teach_ros/launch/: teach.launch.py
ros2_ws/src/inspection/: package.xml  setup.cfg  setup.py
ros2_ws/src/inspection/inspection/: inspection_node.py
ros2_ws/src/inspection/launch/: inspection.launch.py
ros2_ws/src/movement_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/movement_driver/launch/: movement_driver.launch.py
ros2_ws/src/movement_driver/movement_driver/: movement_driver_node.py
ros2_ws/src/path_planner/: package.xml  setup.py
ros2_ws/src/path_planner/launch/: path_planner.launch.py
ros2_ws/src/path_planner/path_planner/: moveit_planner.py  path_planner_node.py
ros2_ws/src/qc_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/qc_bringup/launch/: qc_mission.launch.py  rosbridge.launch.py
ros2_ws/src/qc_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/qc_moveit_config/config/: kinematics.yaml  qc_cell.srdf  qc_cell.urdf.xacro
ros2_ws/src/qc_moveit_config/launch/: qc_move_group.launch.py
ros2_ws/src/qc_moveit_config/test/: cartesian_plan_test.py  collision_check_test.py  gantry_collision_proof.py
ros2_ws/src/qc_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/qc_msgs/action/: ExecutePath.action  Inspect.action  PlanPath.action
ros2_ws/src/qc_msgs/msg/: InspectionResult.msg  MissionState.msg  ScanPath.msg  ScanState.msg  ScanWaypoint.msg
ros2_ws/src/qc_msgs/srv/: StartMission.srv
ros2_ws/src/rail_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/rail_driver/rail_driver/: backends.py  rail_driver_node.py
ros2_ws/src/scanner_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/scanner_driver/launch/: scanner_driver.launch.py
ros2_ws/src/scanner_driver/scanner_driver/: scanner_driver_node.py
ros2_ws/src/sr5_arm_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/sr5_arm_driver/sr5_arm_driver/: arm_driver_node.py  backends.py
ros2_ws/src/task_manager/: package.xml  setup.py
ros2_ws/src/task_manager/launch/: task_manager.launch.py
ros2_ws/src/task_manager/task_manager/: task_manager_node.py
scripts/: build_console.sh  capture_pose.py  export_viewer_bundle.py  install_app.sh  launch_console.sh  launch_stack.sh  plan_box.py  plan_contour.py  plan_hemisphere.py  plan_lawn.py  plan_path.py  plan_surround.py  run_console.sh  scanpath_convert.py  solve_frame_calibration.py  verify_frame_match.py
