<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexory_teach_ros</name>
  <version>0.1.0</version>
  <description>Dexory Robot Teach GUI (ROS 2 node) — teach + replay for SR5 arm and linear slider.</description>
  <maintainer email="leon.trowsdale@dexory.com">Leon Trowsdale</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
