<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qc_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the QC Scanner mission graph: rosbridge (web link)
    now, and the top-level qc_mission.launch.py that brings up the whole graph as
    the nodes land (architecture.md §8).</description>
  <maintainer email="leon.trowsdale@dexory.com">Leon Trowsdale</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>qc_moveit_config</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
