<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sr5_arm_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for the Rokae SR5 arm (mock + xCore SDK backends).</description>
  <maintainer email="leon.trowsdale@dexory.com">Leon Trowsdale</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
