<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_manager</name>
  <version>0.1.0</version>
  <description>TaskManager node — mission orchestrator; owns /mission/state + the rescan loop; serves /mission/{plan,execute,abort}.</description>
  <maintainer email="leon.trowsdale@dexory.com">Leon Trowsdale</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>qc_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
